<resources>
    <string name="app_name">New York Times</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="arts">Arts</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="submit">Save</string>
    <string name="filter">Filter</string>
    <string name="values">News Desk Values</string>
    <string name="sort">Sort Order</string>
    <string name="top_stories">Top Stories</string>
    <string name="date">Begin Date</string>
    <string name="layout">Number of Columns</string>
    <string-array name="sort_arrays">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
    <string-array name="layout_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
