<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/date"
        android:layout_above="@+id/checkboxes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDate"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"/>

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="146dp"
        android:entries="@array/sort_arrays"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_below="@+id/editDate"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/checkboxes"
        android:layout_alignRight="@+id/mySpinner"
        android:layout_alignEnd="@+id/mySpinner"
        android:layout_below="@+id/mySpinner"
        android:layout_toEndOf="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button">

        <CheckBox android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts"
            android:onClick="onCheckboxClicked"
            android:gravity="right"/>

        <CheckBox android:id="@+id/checkbox_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion"
            android:onClick="onCheckboxClicked"
            android:layout_below="@+id/checkbox_arts"
            android:gravity="right"/>

        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports"
            android:onClick="onCheckboxClicked"
            android:layout_below="@+id/checkbox_arts"
            android:gravity="right"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/button"
        android:onClick="onSubmit"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_below="@+id/checkboxes"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        android:id="@+id/sort"
        android:layout_above="@+id/checkboxes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values"
        android:id="@+id/values"
        android:layout_below="@+id/sort" />

</RelativeLayout>